--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.security.user.name=admin
+spring.security.user.password=admin
 
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testowanie1
+spring.datasource.username=testowanieuser
+spring.datasource.password=12345678
+
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql = true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
