Refactoring test structure

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
                     <artifactId>groovy-xml</artifactId>
                 </exclusion>
             </exclusions>
-        </depedency>
+        </dependency>
       
         <dependency>
             <groupId>com.h2database</groupId>
